Fix:Prevent contact section overlapping with skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,8 +601,8 @@ section {
   white-space: nowrap;
 }
 #skills {
-  padding-bottom: 50px;
-  margin-bottom: 80px;
+  padding-bottom: 80px;
+  margin-bottom: 100px;
   position:relative;
   overflow: visible;
   z-index:2; /* gives space after skills before contact starts */
@@ -811,11 +811,11 @@ body {
 }
 #contact{
   clear: both;
-  margin-top: 100px;
+  margin-top: 0;
   padding-top: 50px;
   background-color: #f7f7f7;
   z-index: 1;
   position: relative;
   overflow: hidden; /* or try auto */
-  min-height: 100vh; /* <-- ADD THIS */
+  min-height: auto; /* <-- ADD THIS */
 }
